added display libraries

--- a/foxxboard/Cargo.toml
+++ b/foxxboard/Cargo.toml
@@ -34,6 +34,9 @@ defmt = "0.3"
 defmt-rtt = "0.4"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
 
+embedded-graphics = { version = "0.8", optional = true }
+memory-lcd-spi = { version = "0.0.8", git = "https://github.com/andelf/memory-lcd-spi", optional = true }
+
 [patch.crates-io]
 nrf-softdevice = { version = "0.1.0", git = "https://github.com/embassy-rs/nrf-softdevice", rev = "b53991e"}
 
