--- a/rowanpad/Cargo.toml
+++ b/rowanpad/Cargo.toml
@@ -24,11 +24,16 @@ embassy-executor = { version = "0.7", features = [
     "executor-thread",
     "task-arena-size-32768",
 ] }
+embassy-futures = { version = "0.1", features = ["defmt"] }
 cortex-m-rt = "0.7.3"
 portable-atomic = { version = "1.5", features = ["critical-section"] }
 defmt = "0.3"
 defmt-rtt = "0.4"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
+
+embedded-graphics = { version = "0.8" }
+# memory-lcd-spi = { version = "0.0.8", git = "https://github.com/andelf/memory-lcd-spi" }
+ssd1306 = { version = "0.9.0" } 
 
 # [features]
 # avoid having to use --allow-multiple-definition linker flag
